--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Eine Vimium-ähnliche Chrome-Extension für effiziente Tastaturnavigation",
   "main": "background.js",
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch",
+    "build": "vite build",
+    "dev": "vite build --watch",
+    "preview": "vite preview",
     "test": "echo 'Tests ausführen'",
     "lint": "eslint src/**/*.ts",
     "package": "npm run build && zip -r vimium-d.zip dist/ -x '*.git*' 'node_modules/*' '*.DS_Store'"
@@ -32,16 +33,17 @@
   "devDependencies": {
     "@types/chrome": "^0.0.254",
     "@types/node": "^20.10.0",
-    "typescript": "^5.3.0",
-    "eslint": "^8.55.0",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
-    "@typescript-eslint/parser": "^6.13.0"
+    "@typescript-eslint/parser": "^6.13.0",
+    "eslint": "^8.55.0",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.3.0",
+    "vite": "^6.3.5"
   },
-  "dependencies": {},
   "engines": {
     "node": ">=14.0.0"
   },
   "browserslist": [
     "Chrome >= 88"
   ]
-} 
+}
