--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "vite build",
     "dev": "vite build --watch",
     "preview": "vite preview",
-    "test": "echo 'Tests ausführen'",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
     "lint": "eslint src/**/*.ts",
     "package": "npm run build && zip -r vimium-d.zip dist/ -x '*.git*' 'node_modules/*' '*.DS_Store'"
   },
@@ -31,14 +33,19 @@
   },
   "homepage": "https://github.com/dennisbarzanoff/vimium-d#readme",
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
     "@types/chrome": "^0.0.254",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
+    "@vitest/ui": "^3.2.4",
     "eslint": "^8.55.0",
+    "happy-dom": "^18.0.1",
     "ts-loader": "^9.5.2",
     "typescript": "^5.3.0",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vitest": "^3.2.4"
   },
   "engines": {
     "node": ">=14.0.0"
